fix deprecation in DatabaseEngine